--- a/Finance/cartera.ipynb
+++ b/Finance/cartera.ipynb
@@ -13,19 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cartera = {\n",
+    "carpet = {\n",
     "    'owner': 'Aarón García',\n",
     "    'balance': 10000,\n",
     "    'expenses': [],\n",
@@ -35,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +47,7 @@
     "        print('2- Add new income')\n",
     "        print('3- See expenses')\n",
     "        print('4- See incomes')\n",
+    "        print('5- See wallet')\n",
     "        print('----------')\n",
     "        action = input('Action to perform: ')\n",
     "        self.select_action(action)\n",
@@ -72,6 +61,8 @@
     "            self.see_expenses()\n",
     "        elif action == '4':\n",
     "            self.see_incomes()\n",
+    "        elif action == '5':\n",
+    "            self.see_wallet()\n",
     "        else:\n",
     "            print('Invalid Action Input. Try Again.')\n",
     "    \n",
@@ -79,12 +70,14 @@
     "        expense_name = input('Expense name: ')\n",
     "        expense_description = input('Expense description: ')\n",
     "        expense_amount = float(input('Expense amount: '))\n",
+    "        carpet['balance'] = carpet['balance'] - expense_amount\n",
     "        self.inputs['expenses'].append(self.create_new(expense_name,expense_description,expense_amount))\n",
     "        \n",
     "    def add_income(self):\n",
     "        income_name = input('Income name: ')\n",
     "        income_description = input('Income description: ')\n",
     "        income_amount = float(input('Income amount: '))\n",
+    "        carpet['balance'] = carpet['balance'] + income_amount\n",
     "        self.inputs['incomes'].append(self.create_new(income_name,income_description,income_amount))\n",
     "    \n",
     "    def create_new(self,name,description,amount):\n",
@@ -101,12 +94,15 @@
     "            \n",
     "    def see_incomes(self):\n",
     "        for income in self.inputs['incomes']:\n",
-    "            print(income)"
+    "            print(income)\n",
+    "    \n",
+    "    def see_wallet(self):\n",
+    "        print(carpet)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +115,7 @@
       "2- Add new income\n",
       "3- See expenses\n",
       "4- See incomes\n",
+      "5- See wallet\n",
       "----------\n",
       "-----MENU FINANCIAL WALLET-----\n",
       "Select an option:\n",
@@ -126,6 +123,7 @@
       "2- Add new income\n",
       "3- See expenses\n",
       "4- See incomes\n",
+      "5- See wallet\n",
       "----------\n",
       "-----MENU FINANCIAL WALLET-----\n",
       "Select an option:\n",
@@ -133,32 +131,14 @@
       "2- Add new income\n",
       "3- See expenses\n",
       "4- See incomes\n",
+      "5- See wallet\n",
       "----------\n",
-      "-----MENU FINANCIAL WALLET-----\n",
-      "Select an option:\n",
-      "1- Add new expense\n",
-      "2- Add new income\n",
-      "3- See expenses\n",
-      "4- See incomes\n",
-      "----------\n",
-      "{'name': 'Gansito', 'description': 'Gansito de chocolate', 'amount': 18.0}\n",
-      "{'name': 'Boneless', 'description': 'Boneless BBQ', 'amount': 345.0}\n",
-      "{'name': 'Gansito', 'description': 'Gansito de chocolate', 'amount': 18.0}\n",
-      "{'name': 'Boneless', 'description': 'Boneless BBQ', 'amount': 346.0}\n",
-      "-----MENU FINANCIAL WALLET-----\n",
-      "Select an option:\n",
-      "1- Add new expense\n",
-      "2- Add new income\n",
-      "3- See expenses\n",
-      "4- See incomes\n",
-      "----------\n",
-      "{'name': 'Trabajo', 'description': 'Base de datos cliente 1', 'amount': 2600.0}\n",
-      "{'name': 'Trabajo', 'description': 'Base de datos cliente 1', 'amount': 2700.0}\n"
+      "{'owner': 'Aarón García', 'balance': 14983.0, 'expenses': [{'name': 'Chocolate', 'description': 'En agua', 'amount': 17.0}], 'incomes': [{'name': 'Proyecto ', 'description': 'Ghidora', 'amount': 5000.0}]}\n"
      ]
     }
    ],
    "source": [
-    "w = Wallet(cartera)"
+    "w = Wallet(carpet)"
    ]
   }
  ],
