--- a/Web scraping/follow_nofollow_ig.ipynb
+++ b/Web scraping/follow_nofollow_ig.ipynb
@@ -74,12 +74,22 @@
     "#### Followers ####\n",
     "######       ######\n",
     "\n",
-    "profile_fs = driver.get(f'https://www.instagram.com/your_username/followers/') # <----------------- put your username\n",
+    "profile_fs = driver.get(f'https://www.instagram.com/your_username/') # <----------------- put your username\n",
     "\n",
     "time.sleep(3)\n",
     "\n",
+    "element_f = driver.find_element(\"xpath\", \"/html/body/div[2]/div/div/div[2]/div/div/div[1]/div[2]/div/div[2]/section/main/div/header/section[3]/ul/li[2]/a\")\n",
+    "element_f.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def scroll_followers(minutes):\n",
-    "    pop_up_window = driver.find_element(\"xpath\",\"/html/body/div[6]/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[3]\")\n",
+    "    pop_up_window = driver.find_element(\"xpath\",\"/html/body/div[6]/div[2]/div/div/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[3]\")\n",
     "    # Scroll till Followers list is there\n",
     "    timeout = time.time() + 60 * minutes\n",
     "    while True:\n",
@@ -95,7 +105,7 @@
     "\n",
     "time.sleep(2)\n",
     "\n",
-    "listFollowers = driver.find_elements(\"xpath\",\"/html/body/div[6]/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[3]\")"
+    "listFollowers = driver.find_elements(\"xpath\",\"/html/body/div[6]/div[2]/div/div/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[3]\")"
    ]
   },
   {
@@ -160,13 +170,22 @@
     "#### Following ####\n",
     "######       ######\n",
     "\n",
-    "profile_fg = driver.get(f'https://www.instagram.com/your_username/following/')   # <----------------- put your username\n",
-    "\n",
+    "profile_fg = driver.get(f'https://www.instagram.com/your_username/')   # <----------------- put your username\n",
     "\n",
     "time.sleep(3)\n",
     "\n",
+    "element_f2 = driver.find_element(\"xpath\", \"/html/body/div[2]/div/div/div[2]/div/div/div[1]/div[2]/div/div[2]/section/main/div/header/section[3]/ul/li[3]/a\")\n",
+    "element_f2.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def scroll_following(minutes):\n",
-    "    pop_up_window = driver.find_element(\"xpath\",\"/html/body/div[6]/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[4]\")\n",
+    "    pop_up_window = driver.find_element(\"xpath\",\"/html/body/div[6]/div[2]/div/div/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[4]\")\n",
     "    # Scroll till Following list is there\n",
     "    timeout = time.time() + 60 * minutes\n",
     "    while True:\n",
@@ -182,7 +201,7 @@
     "\n",
     "time.sleep(2)\n",
     "\n",
-    "listFollowing = driver.find_elements(\"xpath\",\"/html/body/div[6]/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[4]\")"
+    "listFollowing = driver.find_elements(\"xpath\",\"/html/body/div[6]/div[2]/div/div/div[1]/div/div[2]/div/div/div/div/div[2]/div/div/div[4]\")"
    ]
   },
   {
